gitops/experimental/apps/homarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
